# AuraSense-The-Ambient-Guardian

./: .env.example  .gitignore  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.agents/skills/architecture-review/: SKILL.md
.agents/skills/architecture-review/references/: backend.md  frontend.md  hardware.md  ml.md  mobile.md
.github/workflows/: ci.yml
dashboard/: .env.example
dashboard/public/: robots.txt
dashboard/src/: routeTree.gen.ts  styles.css  vite-env.d.ts
dashboard/src/lib/: api.ts
dashboard/src/routes/: __root.tsx  about.tsx  console.tsx  contact.tsx  how-it-works.tsx  index.tsx  sitemap[.]xml.ts
hub/: requirements.txt
hub/db/: init_db.py  schema.sql
hub/db/migrations/: 001_f4_energy_and_policies.sql
hub/models/: registry.json
hub/services/: inference.py  ingestion.py  llm_assistant.py
hub/services/api/: main.py  security.py
hub/services/api/routers/: assistant.py  energy.py  events.py  nodes.py  pairing.py  websocket.py
ml/training/acoustic/: train.py
ml/training/anomaly/: train.py
ml/training/fall_detection/: train.py
ml/training/nilm/: train.py
shared/types/: api_types.py  ml_contracts.py  sensor_payload.py
tests/: test_f1_event_bridge.py  test_f1_ingestion.py  test_f2_auth.py  test_f3_inference.py  test_f3_simulator.py  test_f4_data.py
tools/: __init__.py
tools/sim/: __init__.py  __main__.py  generator.py
